--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 
-revison 1.01 date 2010.05.03 --MC
+revison 1.01 date 2010.05.03 --mschhen  
 added a choice of cross section prior for Bayesian technique,  "flat" and "correlated",  default is "correlated"
 
 2010.05.17
@@ -12,4 +12,10 @@ implemented an interface for configuring AK's input format,  in UtilsROOT,  "Con
 revison 1.10 date 2010.08.15 --MC
 Added Tevatron type and Atlas type of test statistics,  also now can deal with rules of CLs and CLsb
 PLR method for calculating significance is implemented 
+
+2010.08.17
+Trey Sellers pointed out that the code needs "#include <cstdio>" to be able to compiled in some platform other than lxplus.
+
+revison 1.11 date ........
+
 
